--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -16,8 +16,8 @@ jobs:
         os: [ubuntu-latest, windows-latest, macOS-latest]
 
     env:
-      Solution_Name: lab5/lab5.sln
-      Test_Project_Path: lab6/lab6.csproj
+      Solution_Name: lab6submission/lab5/lab5.sln
+      Test_Project_Path: lab6submission/lab6/lab6.csproj
 
     steps:
     - name: Checkout code
